src/test/deca/context/valid/return/return_boolean_complex_expr.deca
// Description :
// Return d’une expression booléenne complexe combinant &&, ||, !
//
// Resultats :
// ok

class A {
    boolean f(boolean a, boolean b, boolean c) {
        return (a && b) || (!c && a) || (b && !a);
    }
}
