src/test/deca/context/invalid/return/return_wrong_type_float_in_bool.deca
// Description :
//    Retour d'un float dans une méthode retournant boolean.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    boolean f() {
        return 1.5;
    }
}

{
}

